fix(tooltips): increase tooltips container z-index

--- a/src/client/assets/style.css
+++ b/src/client/assets/style.css
@@ -47,7 +47,7 @@ body:has(#show-li:checked) {
 	width: 100%;
 	height: 100%;
 	pointer-events: none;
-	z-index: 100;
+	z-index: 1000;
 }
 
 .tooltip {
